# pattern-aware-filtering

./: .gitignore  README.md  pyproject.toml
pattern_aware_filtering/extraction/: extractor.py
pattern_aware_filtering/filtering/: __init__.py  heuristic.py  quality_classifier.py  refinedweb.py
pattern_aware_filtering/hashing/: flat_hash_set.py  hash_functions.py
pattern_aware_filtering/utils/: ccpath.py  constants.py  io.py  langdetect.py  normalizer.py  snapshots.py  snapshots.txt
scripts/count_info/: english_extract_count_info.py  extract_en_count_info.sh  extract_ko_count_info.sh  korean_extract_count_info.py
scripts/extract-en/: english_pld_ablation.py  english_ptf_ablation.py  run_pld_ablation.sh  run_ptf_ablation.sh
scripts/extract-ko/: korean_pld_ablation.py  korean_ptf_ablation.py  run_pld_ablation.sh  run_ptf_ablation.sh
scripts/extract_baseline_files/: extract_baseline_en.py  extract_baseline_en.sh  extract_baseline_ko.py  extract_baseline_ko.sh
scripts/hashing/: hashing_en.sh  hashing_ko.sh  merge_each_shard_en.py  merge_each_shard_ko.py  sharded_hashing_en.py  sharded_hashing_ko.py
scripts/pipeline/: run_bff_dedup.sh  run_fasttext_filter.sh  run_full_pipeline.sh  run_refinedweb.sh
scripts/prepare-ccnet/: download_wet_files.py  download_wet_paths_file.py  sample_splits.py
